--- a/frontend/src/app/components/form-platos/form-platos.component.html
+++ b/frontend/src/app/components/form-platos/form-platos.component.html
@@ -15,6 +15,7 @@
                     <p>Costo: {{plato.costo}}.</p>
                     </div>
                     <button (click)="Pedir(plato._id)" class="btn btn-info">Pedir {{plato.nombre}}</button>
+                    <button (click)="Eliminar(plato._id)" class="btn btn-info">Eliminar {{plato.nombre}}</button>
                 </div>
                 </div>
             </div>
