Ultimos cambios ahora si

--- a/frontend/src/app/components/menu/menu.component.html
+++ b/frontend/src/app/components/menu/menu.component.html
@@ -6,6 +6,7 @@
         <li><a class="nav-link" routerLink="/VerMenu" routerLinkActive="activo">Ver Menú</a></li>
         <li><a class="nav-link" routerLink="/Pedidos" routerLinkActive="activo">Pedidos</a></li>
         <li><a class="nav-link" routerLink="/Calificar" routerLinkActive="activo">Calificar</a></li>
+        <li><a class="nav-link" routerLink="/Comentarios" routerLinkActive="activo">Comentarios</a></li>
       </ul>
     </div>
 </nav>
